# Selenium-Movie-Picker

./: directors.json  movies.json  pyproject.toml
selenium_movie_picker/: app.py
tests/: test_selenium_movie_picker.py
